--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: ruby
-rvm: 2.4.2
+rvm: 2.5.1
 cache: bundler
-script:
-- bundle exec rake
-- bundle exec rubocop
+script: bundle exec rake && bundle exec rubocop
